people main에서 뷰 수정 완
상세 페이지 아직

--- a/index.html
+++ b/index.html
@@ -739,321 +739,91 @@
 
             <!-- Undergraduate Researchers -->
             <h3 id="undergraduate">Undergraduate Researchers</h3>
-            <div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/jg-lee-profile-img.jpeg" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Jae-Gun Lee</h2>
-                    <p><span>Research Interests</span>DSP-based Receiver</p>
-                    <p>
-                      <span>Tape-out Schedule</span>2023.11 (28-nm S, 65-nm T),
-                      2024.09 (40-nm T)
-                    </p>
-                    <p>
-                      <span>Achievements</span>2023 SCCUD 구두 발표 최우수상,
-                      ICEIC'24
-                    </p>
-                    <p>
-                      <span>Details</span>Currently pursuing a Bachelor's degree
-                      in the school of electrical engineering at Hanyang
-                      University, Ansan, South Korea. His research interests
-                      include artificial intelligence hardware design and
-                      processing in memory (PIM).
-                    </p>
-                    <p><span>Email</span>dlworjs@hanyang.ac.kr</p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/mg-song-profile-img.jpg" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Min-Gwon Song</h2>
-                    <p>
-                      <span>Research Interests</span>PIM and design automation
-                    </p>
-                    <p>
-                      <span>Achievements</span>2023 SCCUD 구두 발표 최우수상,
-                      DAC'24
-                    </p>
-                    <p>
-                      <span>Details</span>Currently pursuing a Bachelor's degree
-                      in the school of electrical engineering at Hanyang
-                      University, Ansan, South Korea. His research interests
-                      include artificial intelligence hardware design and
-                      processing in memory (PIM).
-                    </p>
-                    <p><span>Email</span>llimsg150@hanyang.ac.kr</p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/jh-kwon-profile-img.png" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Jee-Hyun Kwon</h2>
-                    <p>
-                      <span>Research Interests</span>PAM4 Receiver (DSP-based
-                      Link)
-                    </p>
-                    <p>
-                      <span>Tape-out Schedule</span>2023.07 (28-nm S), 2023.11
-                      (28-nm S)
-                    </p>
-                    <p>
-                      <span>Achievements</span>2023 SCCUD 포스터 발표 대상,
-                      KCS'24
-                    </p>
-                    <p>
-                      <span>Details</span> Currently pursuing a Bachelor's
-                      degree in the school of electrical engineering at Hanyang
-                      University, Ansan, South Korea. Her research interests
-                      include adaptive equalizer and PAM4 receiver (DSP-based
-                      Link).
-                    </p>
-                    <p><span>Email</span>bornin321@hanyang.ac.kr</p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/yj-byeon-profile-img.png" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Yu-Jin Byeon</h2>
-                    <p>
-                      <span>Research Interests</span>Time-Interleaved SAR ADC,
-                      DSP-based Receiver
-                    </p>
-                    <p>
-                      <span>Tape-out Schedule</span>2023.07 (28-nm S), 2023.11
-                      (28-nm S), 2024.06 (28-nm T)
-                    </p>
-                    <p>
-                      <span>Achievements</span>2023 SCCUD 포스터 발표 대상,
-                      KCS'24
-                    </p>
-                    <p>
-                      <span>Details</span>Currently pursuing a Bachelor's degree
-                      in the school of electrical engineering at Hanyang
-                      University, Ansan, South Korea. Her research interests
-                      include adaptive equalizer and PAM4 receiver (DSP-based
-                      Link).
-                    </p>
-                    <p><span>Email</span>byj8629@hanyang.ac.kr</p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/de-lee-profile-img.png" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Dong-Eun Lee</h2>
-                    <p><span>Research Interests</span>DSP-based Transmitter</p>
-                    <p>
-                      <span>Tape-out Schedule</span>2023.07 (28-nm S), 2023.11
-                      (28-nm S), 2024.09 (40-nm T)
-                    </p>
-                    <p>
-                      <span>Achievements</span>2023 SCCUD 포스터 발표 대상,
-                      KCS'24
-                    </p>
-
-                    <p>
-                      <span>Details</span>Currently pursuing a Bachelor's degree
-                      in the school of electrical engineering at Hanyang
-                      University, Ansan, South Korea. Her research interests
-                      include adaptive equalizers and PAM4 receiver (DSP-based
-                      Link).
-                    </p>
-                    <p><span>Email</span>dms2021@hanyang.ac.kr</p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/sm-jin-profile-img.jpg" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Seung-Mo Jin</h2>
-                    <p><span>Research Interests</span>DSP-based Transmitter</p>
-                    <p>
-                      <span>Achievements</span>2023 SCCUD 구두 발표 최우수상,
-                      ICEIC'24
-                    </p>
-
-                    <p>
-                      <span>Details</span>Currently pursuing a Bachelor's degree
-                      in the school of electrical engineering at Hanyang
-                      University, Ansan, South Korea. His research interests
-                      include artificial intelligence hardware design and
-                      processing in memory (PIM).
-                    </p>
-                    <p><span>Email</span>victorymo@hanyang.ac.kr</p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/ws-jung-profile-img.png" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Woo-Suk Jung</h2>
-                    <p>
-                      <span>Research Interests</span>AI hardware design and PIM
-                      (2T DRAM)
-                    </p>
-                    <p><span>Tape-out Schedule</span>2024.07 (28-nm S)</p>
-                    <p>
-                      <span>Details</span>Currently pursuing a Bachelor's degree
-                      in the school of electrical engineering at Hanyang
-                      University, Ansan, South Korea. His research interests
-                      include artificial intelligence hardware design and
-                      processing in memory (PIM).
-                    </p>
-                    <p><span>Email</span>wjd5952@hanyang.ac.kr</p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/jh-park-profile-img.jpg" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Jong-Hoon Park</h2>
-                    <p>
-                      <span>Research Interests</span>AI hardware design and
-                      Digital PIM
-                    </p>
-                    <p><span>Tape-out Schedule</span></p>
-                    <p>
-                      <span>Details</span>Currently pursuing a Bachelor's degree
-                      in the school of electrical engineering at Hanyang
-                      University, Ansan, South Korea. His research interests
-                      include artificial intelligence hardware design and
-                      Digital processing in memory (Digital PIM).
-                    </p>
-                    <p><span>Email</span>hoon765@hanyang.ac.kr</p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/empty-profile-img.jpg" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Open Positions. No prerequisite!</h2>
-                    <p>
-                      <span>Research Interests</span>
-                    </p>
-                    <p>
-                      <span>Tape-out Schedule</span>
-                    </p>
-                    <p>
-                      <span>Achievements</span>
-                    </p>
-                    <p><span>Details</span></p>
-                    <p><span>Email</span></p>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <div class="row undergraduate-researchers"></div>
 
             <!-- Undergraduate Internship-->
-            <h3 id="undergraduate-internship">Undergraduate Internship</h3>
-            <div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/HYU_logo.png" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Hanyang University Erica</h2>
-                    <p>
-                      <span><b>4학년</b></span>
-                    </p>
-                    <p><span></span></p>
-                    <p><span></span></p>
+            <div class="accordion">
+              <h3 id="undergraduate-internship">Undergraduate Internship</h3>
+              <div>
+                <div class="wrapper">
+                  <div class="user-card">
+                    <div class="user-card-img">
+                      <img src="img/HYU_logo.png" alt="" />
+                    </div>
+                    <div class="user-card-info">
+                      <h2>Hanyang University Erica</h2>
+                      <p>
+                        <span><b>4학년</b></span>
+                      </p>
+                      <p><span></span></p>
+                      <p><span></span></p>
 
-                    <p>
-                      <span><b>3학년</b></span>
-                    </p>
-                    <p><span>이진호 (pim)</span></p>
-                    <p><span>정보성 (analog)</span></p>
-                    <p><span>이도형 (CDR)</span></p>
-                    <p><span>최재현 (analog)</span></p>
-                    <p><span>원지섭 (analog)</span></p>
-                    <p><span>박문석 (pim)</span></p>
-                    <p><span>박계륜 (tbd)</span></p>
-                    <p><span>최재진 (tbd)</span></p>
-                    <p><span>김재식 (tbd)</span></p>
-                    <p><span></span></p>
-                    <p>
-                      <span><b>2학년</b></span>
-                    </p>
-                    <p><span></span></p>
+                      <p>
+                        <span><b>3학년</b></span>
+                      </p>
+                      <p><span>이진호 (pim)</span></p>
+                      <p><span>정보성 (analog)</span></p>
+                      <p><span>이도형 (CDR)</span></p>
+                      <p><span>최재현 (analog)</span></p>
+                      <p><span>원지섭 (analog)</span></p>
+                      <p><span>박문석 (pim)</span></p>
+                      <p><span>박계륜 (tbd)</span></p>
+                      <p><span>최재진 (tbd)</span></p>
+                      <p><span>김재식 (tbd)</span></p>
+                      <p><span></span></p>
+                      <p>
+                        <span><b>2학년</b></span>
+                      </p>
+                      <p><span></span></p>
+                    </div>
+                  </div>
+                </div>
+                <div class="wrapper">
+                  <div class="user-card">
+                    <div class="user-card-img">
+                      <img src="img/IIT.png" alt="" />
+                    </div>
+                    <div class="user-card-info">
+                      <h2>Indian Institutes of Technology</h2>
+                      <p><span>K Vasanthakumaaran</span></p>
+                      <p><span>Sneha Das</span></p>
+                      <p><span>Devarsh Bhandari</span></p>
+                    </div>
+                  </div>
+                </div>
+                <div class="wrapper">
+                  <div class="user-card">
+                    <div class="user-card-info">
+                      <h2>Open Positions. No prerequisite!</h2>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/IIT.png" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <h2>Indian Institutes of Technology</h2>
-                    <p><span>K Vasanthakumaaran</span></p>
-                    <p><span>Sneha Das</span></p>
-                    <p><span>Devarsh Bhandari</span></p>
-                  </div>
-                </div>
-              </div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-info">
-                    <h2>Open Positions. No prerequisite!</h2>
+
+              <h3 class="h3-items" id="alumni">Alumni</h3>
+              <div>
+                <div class="wrapper">
+                  <div class="user-card">
+                    <div class="user-card-img">
+                      <img src="img/graduate-hanyange.png" alt="" />
+                    </div>
+                    <div class="user-card-info">
+                      <p><span>In-Woo Jang (M.S. @ KAIST)</span></p>
+                      <p>
+                        <span
+                          >Geun-Young Yoo (M.S.-Ph.D. @ Hanyang
+                          University)</span
+                        >
+                      </p>
+                      <p><span>Tae-Hyun Kim (M.S.-Ph.D. @ POSTECH)</span></p>
+                      <p><span>Seung-Wan Han (ASML)</span></p>
+                      <p><span>Woo-Suk Jung (@ Yonsei University)</span></p>
+                      <p><span> Dong-Eun Lee (Samsung Electronics)</span></p>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-
-            <h3 class="h3-items" id="alumni">Alumni</h3>
-            <div>
-              <div class="wrapper">
-                <div class="user-card">
-                  <div class="user-card-img">
-                    <img src="img/graduate-hanyange.png" alt="" />
-                  </div>
-                  <div class="user-card-info">
-                    <p><span>In-Woo Jang (M.S. @ KAIST)</span></p>
-                    <p>
-                      <span
-                        >Geun-Young Yoo (M.S.-Ph.D. @ Hanyang University)</span
-                      >
-                    </p>
-                    <p><span>Tae-Hyun Kim (M.S.-Ph.D. @ POSTECH)</span></p>
-                    <p><span>Seung-Wan Han (ASML)</span></p>
-                    <p><span>Woo-Suk Jung (@ Yonsei University)</span></p>
-                    <p><span> Dong-Eun Lee (Samsung Electronics)</span></p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- </div> -->
           </div>
         </div>
       </div>
