--- a/index.html
+++ b/index.html
@@ -872,6 +872,7 @@
 
             <!-- Pub: Conference-->
             <div id="conference" class="tab-pane fade">
+              <div class="conference-container"></div>
               <h3>2024</h3>
               <div class="container">
                 <div class="row">
