--- a/index.html
+++ b/index.html
@@ -722,6 +722,96 @@
           </div>
           <div class="col-12 col-lg-8">
             <!-- Principal Investigator -->
+            <!-- 프로필 카드 -->
+            <div class="accordion">
+              <!-- Principal Investigator -->
+              <h3 id="professor">Principal Investigator</h3>
+              <div>
+                <div class="wrapper">
+                  <div class="user-card">
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-12 col-lg-4 profile-left">
+                          <!-- 프로필 이미지 -->
+                          <img
+                            class="portrait"
+                            src="img/minseong-chu-profile-img.png"
+                            alt="minseong-chu-profile-img"
+                          />
+
+                          <!-- 프로필 이미지 아래 설명 -->
+                          <div class="portrait-title">
+                            <h2>Minseong Choo</h2>
+                            <h3>Assistant Professor</h3>
+
+                            <!-- 프로필 아래 링크 아이콘 -->
+                            <ul class="network-icon" area-hidden="true">
+                              <li>
+                                <a
+                                  href="https://scholar.google.com/citations?user=9pp10QUAAAAJ&hl=en"
+                                >
+                                  <img src="img/google-scholar-svg.svg" />
+                                </a>
+                              </li>
+                              <li>
+                                <a
+                                  href="https://drive.google.com/file/d/1-O553iH_hAohpycfDRlX6YO07z2_3d1G/view"
+                                >
+                                  <img src="img/cv-svg.svg" />
+                                </a>
+                              </li>
+                              <li>
+                                <a
+                                  href="https://www.linkedin.com/in/min-seong-choo-5b7036176/"
+                                >
+                                  <img src="img/linkedin-svg.svg" />
+                                </a>
+                              </li>
+                              <li>
+                                <a href="https://orcid.org/0000-0002-8638-6332">
+                                  <img src="img/orcid-svg.svg" />
+                                </a>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                        <div class="col-12 col-lg-8 profile-right">
+                          <!-- 프로필 우측 설명 -->
+
+                          <p>
+                            <span>Research Interests</span>
+                          </p>
+                          <ul class="ul-interests">
+                            <li>High-Speed Interface Design</li>
+                            <li>
+                              Phase-Locked Loop (PLL) and Clock and Data
+                              Recovery (CDR) Circuits
+                            </li>
+                            <li>Injection-Locked Oscillator (ILO)</li>
+                            <li>Neuromorphic Computing</li>
+                            <li>In-Memory Computing (IMC)</li>
+                            <li>Processing-In-Memory (PIM)</li>
+                            <li>Optical Transceiver</li>
+                            <li>Script-Based Design/Measurement Automation</li>
+                          </ul>
+                          <p>
+                            <span>Details</span>
+                          </p>
+                          <p>
+                            I serve as a reviewer for various journals,
+                            including the IEEE Journal of Solid-State Circuits,
+                            IEEE Transactions on Circuits and Systems I/II, IEEE
+                            Transactions on Computer-Aided Design of Integrated
+                            Circuits and Systems, and IEEE ACCESS.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
             <h3 id="professor">Principal Investigator</h3>
             <div class="row principal-investigator"></div>
 
