모달 profile_img, name, position 보이게
TODO
오른쪽 내용 업데이트되게 구현
network 링크 없으면 아이콘 숨기도록

--- a/index.html
+++ b/index.html
@@ -978,7 +978,6 @@
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
           <div class="modal-header">
-            <!-- <h1 class="modal-title fs-5" id="exampleModalLabel">Test Title</h1> -->
             <button
               type="button"
               class="btn-close"
@@ -996,14 +995,15 @@
                         <!-- 프로필 이미지 -->
                         <img
                           class="portrait"
+                          id="modal-profile-img"
                           src="img/minseong-chu-profile-img.png"
                           alt="minseong-chu-profile-img"
                         />
 
                         <!-- 프로필 이미지 아래 설명 -->
                         <div class="portrait-title">
-                          <h2 id="modalName">Minseong Choo</h2>
-                          <h3>Assistant Professor</h3>
+                          <h2 id="modal-name">Minseong Choo</h2>
+                          <h3 id="modal-position">Assistant Professor</h3>
 
                           <!-- 프로필 아래 링크 아이콘 -->
                           <ul class="network-icon" area-hidden="true">
