모달 details 업데이트 되도록

--- a/index.html
+++ b/index.html
@@ -1002,8 +1002,8 @@
 
                         <!-- 프로필 이미지 아래 설명 -->
                         <div class="portrait-title">
-                          <h2 id="modal-name">Minseong Choo</h2>
-                          <h3 id="modal-position">Assistant Professor</h3>
+                          <h2 id="modal-name"></h2>
+                          <h3 id="modal-position"></h3>
 
                           <!-- 프로필 아래 링크 아이콘 -->
                           <ul class="network-icon" area-hidden="true">
@@ -1058,7 +1058,7 @@
                         <p>
                           <span>Details</span>
                         </p>
-                        <p>
+                        <p id="modal-details">
                           I serve as a reviewer for various journals, including
                           the IEEE Journal of Solid-State Circuits, IEEE
                           Transactions on Circuits and Systems I/II, IEEE
