research_interests 업데이트

--- a/index.html
+++ b/index.html
@@ -1042,29 +1042,14 @@
                         <p>
                           <span>Research Interests</span>
                         </p>
-                        <ul class="ul-interests">
-                          <li>High-Speed Interface Design</li>
-                          <li>
-                            Phase-Locked Loop (PLL) and Clock and Data Recovery
-                            (CDR) Circuits
-                          </li>
-                          <li>Injection-Locked Oscillator (ILO)</li>
-                          <li>Neuromorphic Computing</li>
-                          <li>In-Memory Computing (IMC)</li>
-                          <li>Processing-In-Memory (PIM)</li>
-                          <li>Optical Transceiver</li>
-                          <li>Script-Based Design/Measurement Automation</li>
-                        </ul>
+                        <ul
+                          class="ul-interests"
+                          id="modal-research_interests"
+                        ></ul>
                         <p>
                           <span>Details</span>
                         </p>
-                        <p id="modal-details">
-                          I serve as a reviewer for various journals, including
-                          the IEEE Journal of Solid-State Circuits, IEEE
-                          Transactions on Circuits and Systems I/II, IEEE
-                          Transactions on Computer-Aided Design of Integrated
-                          Circuits and Systems, and IEEE ACCESS.
-                        </p>
+                        <p id="modal-details"></p>
                       </div>
                     </div>
                   </div>
