--- a/index.html
+++ b/index.html
@@ -1006,34 +1006,7 @@
                           <h3 id="modal-position"></h3>
 
                           <!-- 프로필 아래 링크 아이콘 -->
-                          <ul class="network-icon" area-hidden="true">
-                            <li>
-                              <a
-                                href="https://scholar.google.com/citations?user=9pp10QUAAAAJ&hl=en"
-                              >
-                                <img src="img/google-scholar-svg.svg" />
-                              </a>
-                            </li>
-                            <li>
-                              <a
-                                href="https://drive.google.com/file/d/1-O553iH_hAohpycfDRlX6YO07z2_3d1G/view"
-                              >
-                                <img src="img/cv-svg.svg" />
-                              </a>
-                            </li>
-                            <li>
-                              <a
-                                href="https://www.linkedin.com/in/min-seong-choo-5b7036176/"
-                              >
-                                <img src="img/linkedin-svg.svg" />
-                              </a>
-                            </li>
-                            <li>
-                              <a href="https://orcid.org/0000-0002-8638-6332">
-                                <img src="img/orcid-svg.svg" />
-                              </a>
-                            </li>
-                          </ul>
+                          <ul id="network-icon" area-hidden="true"></ul>
                         </div>
                       </div>
                       <div class="col-12 col-lg-8 profile-right">
@@ -1050,6 +1023,10 @@
                           <span>Details</span>
                         </p>
                         <p id="modal-details"></p>
+                        <p>
+                          <span>Email</span>
+                        </p>
+                        <p id="modal-email"></p>
                       </div>
                     </div>
                   </div>
