학생들 모달뷰 완

--- a/index.html
+++ b/index.html
@@ -1011,19 +1011,22 @@
                       </div>
                       <div class="col-12 col-lg-8 profile-right">
                         <!-- 프로필 우측 설명 -->
-
-                        <p>
+                        <p style="margin-bottom: 8px">
                           <span>Research Interests</span>
                         </p>
                         <ul
                           class="ul-interests"
                           id="modal-research_interests"
                         ></ul>
-                        <p>
+                        <p style="margin-bottom: 8px">
+                          <span>Tape-out Schedule</span>
+                        </p>
+                        <p id="modal-tape_out_schedule"></p>
+                        <p style="margin-bottom: 8px">
                           <span>Details</span>
                         </p>
                         <p id="modal-details"></p>
-                        <p>
+                        <p style="margin-bottom: 8px">
                           <span>Email</span>
                         </p>
                         <p id="modal-email"></p>
