모달뷰에 빠진 achievements 추가
tape out schedule, achievements 없으면 제목도 빼야함

--- a/index.html
+++ b/index.html
@@ -1023,6 +1023,10 @@
                         </p>
                         <p id="modal-tape_out_schedule"></p>
                         <p style="margin-bottom: 8px">
+                          <span>Achievements</span>
+                        </p>
+                        <p id="modal-achievements"></p>
+                        <p style="margin-bottom: 8px">
                           <span>Details</span>
                         </p>
                         <p id="modal-details"></p>
