--- a/index.html
+++ b/index.html
@@ -1018,11 +1018,17 @@
                           class="ul-interests"
                           id="modal-research_interests"
                         ></ul>
-                        <p style="margin-bottom: 8px">
+                        <p
+                          style="margin-bottom: 8px"
+                          id="modal-tape_out_schedule-title"
+                        >
                           <span>Tape-out Schedule</span>
                         </p>
                         <p id="modal-tape_out_schedule"></p>
-                        <p style="margin-bottom: 8px">
+                        <p
+                          style="margin-bottom: 8px"
+                          id="modal-achievements-title"
+                        >
                           <span>Achievements</span>
                         </p>
                         <p id="modal-achievements"></p>
