--- a/index.html
+++ b/index.html
@@ -725,8 +725,8 @@
             <div class="row principal-investigator"></div>
 
             <!-- Ph.D./M.S. Students -->
-            <h3 id="phd-ms-students">Ph.D./M.S. Students</h3>
-            <div class="row phd-ms-students"></div>
+            <!-- <h3 id="phd-ms-students">Ph.D./M.S. Students</h3> -->
+            <!-- <div class="row phd-ms-students"></div> -->
 
             <!-- M.S.-Ph.D. Candidates -->
             <h3 id="ms-phd-candidates">M.S.-Ph.D. Candidates</h3>
@@ -745,7 +745,7 @@
             <div class="row undergraduate-researchers"></div>
 
             <!-- Undergraduate Internship-->
-            <div class="accordion">
+            <!-- <div class="accordion">
               <h3 id="undergraduate-internship">Undergraduate Internship</h3>
               <div>
                 <div class="wrapper">
@@ -802,7 +802,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
               <h3 class="h3-items" id="alumni">Alumni</h3>
               <div>
