--- a/index.html
+++ b/index.html
@@ -745,8 +745,8 @@
             <div class="row undergraduate-researchers"></div>
 
             <!-- Undergraduate Internship-->
-            <!-- <div class="accordion">
-              <h3 id="undergraduate-internship">Undergraduate Internship</h3>
+            <div class="accordion">
+              <!-- <h3 id="undergraduate-internship">Undergraduate Internship</h3>
               <div>
                 <div class="wrapper">
                   <div class="user-card">
