--- a/index.html
+++ b/index.html
@@ -271,6 +271,13 @@
             <h5>Timeline</h5>
             <ul class="news-ul">
               <li>
+                <p class="news-date">Oct.2024</p>
+                <p>
+                  Welcome! J.-H. Pyeon, S.-Y Kwon and I.-H. Han have joined the HPIC design
+                  lab. as a candidate for a Master's degree.
+                </p>
+              </li>
+              <li>
                 <p class="news-date">Feb.2024</p>
                 <p>
                   Welcome! S.-H. Ok and D.-H. Lee have joined the HPIC design
