--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
                 <div class="wrapper">
                   <div class="user-card">
                     <div class="user-card-img">
-                      <img src="img/graduate-hanyange.png" alt="" />
+                      <!-- <img src="img/graduate-hanyange.png" alt="" /> -->
                     </div>
                     <div class="user-card-info">
                       <p><span>In-Woo Jang (M.S. @ KAIST)</span></p>
