--- a/index.html
+++ b/index.html
@@ -744,8 +744,8 @@
             <div class="row ms-candidates"></div>
 
             <!-- M.S. Candidates -->
-            <h3 id="ms-candidates-2503">M.S. Candidates (as of 25.03)</h3>
-            <div class="row ms-candidates-2503"></div>            
+            <!-- <h3 id="ms-candidates-2503">M.S. Candidates (as of 25.03)</h3>
+            <div class="row ms-candidates-2503"></div>             -->
 
             <!-- Undergraduate Researchers -->
             <!-- <h3 id="undergraduate">Undergraduate Researchers</h3>
