--- a/index.html
+++ b/index.html
@@ -830,6 +830,8 @@
                       <p><span>Seung-Wan Han (ASML)</span></p>
                       <p><span>Woo-Suk Jung (@ Yonsei University)</span></p>
                       <p><span> Dong-Eun Lee (Samsung Electronics)</span></p>
+                      <p><span> Ji-Ho Kim (4Lynx)</span></p>
+                      <p><span> Kyu-Lan Park (LX semicon)</span></p>
                     </div>
                   </div>
                 </div>
