--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
                       <p><span>Woo-Suk Jung (@ Yonsei University)</span></p>
                       <p><span> Dong-Eun Lee (Samsung Electronics)</span></p>
                       <p><span> Ji-Ho Kim (4Lynx)</span></p>
-                      <p><span> Kyu-Lan Park (LX semicon)</span></p>
+                      <p><span> Kyu-Ran Park (LX semicon)</span></p>
                     </div>
                   </div>
                 </div>
